<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPersonActivity">

    <TextView
        android:id="@+id/newPersonTextViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/updatePersonTitle"
        android:textSize="24sp"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/PatientNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/PatientName"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/newPersonTextViewID"

        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/PatientTelecomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PatientNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/PatientTelecom"
        android:inputType="phone"

        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/PatientAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/PatientAddressEditText"
        android:maxLines="3"
        android:inputType="textPostalAddress|textMultiLine"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/PatientTelecomEditText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/PatientBirthDate"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PatientAddressEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/PatientBirthDateEditText"

        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PatientGenderRadioGroup"
        android:layout_marginTop="25dp"
        android:layout_below="@id/PatientBirthDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        >

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleRB"
            />
        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleRB"
            />
        <RadioButton
            android:id="@+id/otherRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherRB"
            />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PatientActiveRadioGroup"
        android:layout_marginTop="25dp"
        android:layout_below="@id/PatientGenderRadioGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/PatientActiveRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activeRB"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PatientInactiveRB"
            android:text="@string/inactiveRB"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/PatientActiveRadioGroup"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/UpdatePatientButton"
            android:text="@string/updatePerson"
            android:onClick="createPatient"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel"
            android:onClick="cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>
